# web-services

./: README.md  docker-compose.yml
cache-store/: package-lock.json  package.json
cache-store/src/: server.ts
data-store/: Cargo.toml  Dockerfile  package-lock.json  package.json
data-store/data/: spells.txt
data-store/src/: main.rs  server.ts
dns-resolver/: Cargo.toml  Dockerfile
dns-resolver/src/: main.rs
dns-server/: Cargo.toml
dns-server/src/: domain.txt  main.rs
http-api/: .dockerignore  Cargo.toml  Dockerfile
http-api/src/: main.rs
ingress-client/: Cargo.toml  performance.sh
ingress-client/src/: main.rs
load-balancer/: Cargo.toml
load-balancer/src/: config.toml  main.rs
message-queue/: Dockerfile  package-lock.json  package.json  tsconfig.json
message-queue/src/: server.ts
object-storage/: Dockerfile  package-lock.json  package.json
object-storage/src/: server.ts
