[package]
name = "http-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
clap = { version = "4.5.4", features = ["derive", "env"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json"] }

# Define a binary target if `src/main.rs` exists
[[bin]]
name = "myapp"
path = "src/main.rs"