[package]
name = "load-balancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.3"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"

# Define a binary target if `src/main.rs` exists
[[bin]]
name = "myapp"
path = "src/main.rs"